syntax ="proto3";

package demo;
import "google/api/annotations.proto";

service HelloWorld {
    rpc SendGet(HelloRequest) returns (HelloResponse){
    option (google.api.http).get = "/get";
}

    rpc SendPost(HelloRequest) returns(HelloResponse){
        option (google.api.http) = {
            post:"/post"
            body:"*"
        };
    }
}

// The request message containing the user's name.
message HelloRequest{
    string name =1;
}

// The response message containing the greetings
message HelloResponse{
    string message = 1;
}